src_old/objects/EntityChangeLog__c.object
<CustomObject>
    <fields>
        <fullName>ChangeDateTime__c</fullName>
        <label>Change Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ChangeNumberNumeric__c</fullName>
        <formula>VALUE(ChangeNumber__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change Number Numeric</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChangeNumber__c</fullName>
        <label>Change Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ChangeType__c</fullName>
        <label>Change Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EntityId__c</fullName>
        <label>Entity Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>ProjectService</fullName>
                </value>
                <value>
                    <fullName>Job</fullName>
                </value>
                <value>
                    <fullName>JobAttemptWorker</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Entity Change Logs</relationshipLabel>
        <relationshipName>Entity_Change_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectService__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Service</label>
        <referenceTo>ProjectService__c</referenceTo>
        <relationshipLabel>Entity Change Logs</relationshipLabel>
        <relationshipName>Entity_Change_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Type</label>
        <referenceTo>ProjectType__c</referenceTo>
        <relationshipLabel>Entity Change Logs</relationshipLabel>
        <relationshipName>EntityChangeLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Entity Change Logs</relationshipLabel>
        <relationshipName>Entity_Change_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hold</fullName>
                    <default>true</default>
                    <label>Hold</label>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URI__c</fullName>
        <label>URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Entity Change Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ECL-{0000000000}</displayFormat>
        <label>Entity Change Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entity Change Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>